Reduce space used by Current search to avoid saved search overlap
On Firefox, extra spacing around select options causes the
Current search box to push down into the Saved search section
when a Results message is shown, like when loading a saved
search. Override the default padding added on Firefox and
remove the second br to provide some additional space
to avoid the overlap.

--- a/share/static/css/base/misc.css
+++ b/share/static/css/base/misc.css
@@ -132,3 +132,11 @@ td.current-recipients {
 span.pagenum {
     display: inline-block;
 }
+
+/* Remove the default 2 px top/bottom added by Firefox to give more room
+   for the saved search form on the query builder */
+
+#editquery select option {
+    padding-top: 0;
+    padding-bottom: 0;
+}
